changed alot of code around, and added in local storage. might revisit later to pretty up, but working well.

--- a/index.html
+++ b/index.html
@@ -31,12 +31,10 @@
                     <input type="number" id="pages" name="pages">
                 </div>
     
-                <div class="input-block" id="radio-container">
-                    <label for="isRead">Finished reading?</label>
-                    <div id="readStatus">
-                        <label for="book-status">Read:</label>
-                        <input type="checkbox" id="isRead" name="isRead" value=true>
-                    </div>
+                <div id='checkBox'>
+                    <p><label >Have you read it? </label><input type='checkbox' id='read' name='read' value='yes'></p>
+                </div>
+                
                 </div>
                 <div class = "formButtons">
                     <button type="submit" id ="submit">Add Book</button>
